clusters/beryjuorg-prd/minio/imagik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: imagik
  name: imagik
  namespace: minio
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: imagik
  template:
    metadata:
      labels:
        app.kubernetes.io/name: imagik
    spec:
      containers:
      - command:
        - /imagik
        - -c=/config.yml
        image: ghcr.io/beryju/imagik:latest-1652772510-286f1ecbeaf332da3e9dd71c2517c5ff536f8be2 # {"$imagepolicy": "flux-system:imagik"}
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/pub/health/liveness
            port: http
            scheme: HTTP
        name: imagik
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        - containerPort: 9300
          name: http-metrics
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/pub/health/readiness
            port: http
            scheme: HTTP
          failureThreshold: 20
          successThreshold: 1
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 250M
          requests:
            cpu: 10m
            memory: 10M
