clusters/beryjuorg-prd/minio/minio-deployment-new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-new
  namespace: minio
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minio
    spec:
      containers:
        - command:
            - sh
          args:
            - -c
            - "sleep 30 && minio server --console-address :9001 /storage"
          image: quay.io/minio/minio:RELEASE.2023-01-06T18-11-18Z
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /minio/health/live
              port: 9000
              scheme: HTTP
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 30
          name: minio
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
            - containerPort: 9001
              name: http-console
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /minio/health/ready
              port: 9000
              scheme: HTTP
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 30
          resources: {}
          volumeMounts:
            - mountPath: /storage
              name: storage
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: minio-pvc-new
